test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-create-policy-invalid/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-sync-create-policy-invalid
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: "if kubectl apply -f policy.yaml\nthen \n  echo \"Tested failed.
          Policy was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo
          \"Test succeeded. Policy was not created as intended.\"\n  exit 0\nfi\n"
